force-app/main/default/objects/FieloSVY__SurveyTag__c/FieloSVY__SurveyTag__c.object-meta.xml
<CustomObject>
    <label>Survey Tag</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Survey Tags Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>