force-app/main/default/objects/FieloSVY__SurveyTag__c/fields/FieloSVY__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__ExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>