force-app/main/default/objects/FieloSVY__SurveyTag__c/fields/FieloSVY__Tag__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>FieloEE__Tag__c</referenceTo>
    <relationshipLabel>Survey Tags</relationshipLabel>
    <relationshipName>Survey_Tags</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>